base/src/test/resources/failure/terck/non-term.aya.txt
In file $FILE:7:4 ->

  5 | --^ TODO: check indirect recursion in SCCs
  6 | 
  7 | def non Nat : Nat
          ^-^

Error: The recursive definition `non` is not structurally recursive

1 error(s), 0 warning(s).
What are you doing?
